# license-service

./: .gitignore  Cargo.toml  README.md  build.rs  concept.excalidraw
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
proto/: license.proto
src/: client.rs  lib.rs  licensing.rs  networking.rs  server.rs
