[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
vlks = { path = "../../" }
example_common = { path = "../common" }